# resolver

./: .env  .gitignore  CMakeLists.txt  Dns.cpp  Dns.h  Dns_test.cpp  README  _ci.sh  build.sh  s.3789.strace
include/: Dns.h  Resolver.h
include/dns/: answer.h  bin_serialize.h  header.h  label_list.h  message.h  name_offset_tracker.h  op_code.h  question.h  r_code.h  record.h  resolver.h  rr_class.h
include/dns/detail/: bin_serialize.h  label_list.h  name_offset_tracker.h  query_builder.h
include/dns/exception/: bad_name.h  bad_ptr_offset.h
include/dns/record/: rec_a.h  rec_cname.h  rec_mx.h  rec_ns.h  rec_ptr.h  rec_soa.h  rec_txt.h
include/dns/tcp/: resolver.h
include/dns/udp/: resolver.h
include/test/: exception_info.h  make_my_unique.h  test_context.h
include/util/: TypeList.h  TypeMap.h  TypeMapSwitch.h  name_builder.h  oct_dump.h  split2_at.h
src/: .gitignore  CMakeLists.txt  Dns.cpp  Dns.h  Dns_test.cpp  Header.h  K.cpp  LabelList.h  MyDig.cpp  MyDns.cpp  Question.h  Resolver.h  ResourceRecord.h  all.sh  bad_data_stream.h  bad_name.h  bad_ptr_offset.h  build.sh  ci.sh  make_my_unique.h  notes.txt  raw_dump.h  split2_at.h  stringize.h  test_context.h  vector_end_range.h
src/detail/: response_builder.h
src/dns/: bin_serialize.h  header.h  header_test.cpp  label_list.h  message.h  name_offset_tracker.h  op_code.h  question.h  r_code.h  record.h  rr_type.h
src/dns/exception/: bad_data_stream.h
src/misc/: BinaryLog.h  File.cpp  File.h  K.cpp  K.cpp.html  main.cpp
src/test/: CMakeLists.txt  header_test.cpp  label_list_test.cpp  question_test.cpp  record_test.cpp
test/: CMakeLists.txt  TypeList_test.cpp  TypeMapSwitch_test.cpp  header_test.cpp  label_list_test.cpp  question_test.cpp  record_test.cpp
thirdparty-externals/: .gitignore  README
thirdparty-externals/devel-packages/: .gitignore  INSTALL  README
thirdparty-externals/tools/: INSTALL  README
(+2 files in other folders)
